changes in the Readme.md

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: updater
+name: app_updater_flutter
 description: A robust, modular update checker for Flutter. Supports Android (Play Store) & iOS (App Store) with native UI, scraping fallback, and custom JSON sources.
 repository: https://github.com/KarthikManikuttan/updater.git
 version: 1.0.0
